--- a/src/routes/w/[slug]/style.css
+++ b/src/routes/w/[slug]/style.css
@@ -72,7 +72,7 @@ blockquote {
 p {
     margin-top: 8px;
     margin-bottom: 8px;
-    color: #e7e7e7;
+    color: #d6d6d6;
     font-size: 17px;
     padding-left: 10px;
 }
